[package]
name = "ch32v-rt"
version = "0.0.1"
edition = "2021"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/ch32v-rs/ch32v-rt"
documentation = "https://docs.rs/ch32v-rt"
homepage = "https://github.com/ch32v-rs/ch32v-rt"
categories = ["no-std", "embedded"]
description = "Minimal runtime / startup for WCH's RISC-V MCUs, managed by the ch32-rs team"
keywords = ["wch", "riscv", "runtime", "startup"]
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
# For now, unused
# ch32v-rt-macros = { path = "macros", version = "0.0.1" }
riscv-rt-macros = { version = "0.2.0" }

[workspace]
members = ["ch32v-rt-macros"]
