[package]
name = "ch32v-rt"
version = "0.0.3"
edition = "2021"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/ch32v-rs/ch32v-rt"
documentation = "https://docs.rs/ch32v-rt"
homepage = "https://github.com/ch32v-rs/ch32v-rt"
categories = ["no-std", "embedded"]
description = "DEPRECATED: use qingke-rt instead"
keywords = ["wch", "riscv", "runtime", "startup"]
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
ch32v-rt-macros = { path = "macros", version = "0.0.2" }

[workspace]
members = ["macros"]
