[package]
name = "ch32v-rt-macros"
version = "0.0.1"
edition = "2021"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/ch32v-rs/ch32v-rt"
documentation = "https://docs.rs/ch32v-rt"
homepage = "https://github.com/ch32v-rs/ch32v-rt"
categories = ["embedded", "no-std"]
description = "DEPRECATED: use qingke-rt-macros instead"
keywords = ["riscv", "runtime", "startup"]
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0.4"

[dependencies.syn]
version = "1.0"
features = ["extra-traits", "full"]
